加入 timeago.js 套件

--- a/loleaflet/package.json
+++ b/loleaflet/package.json
@@ -20,6 +20,7 @@
     "shrinkpack": "0.13.1",
     "smartmenus": "1.0.0",
     "timeago": "1.5.3",
+    "timeago.js": "4.0.0-beta.1",
     "uglify-js": "2.4.24",
     "uglifycss": "0.0.27",
     "uglifyify": "3.0.2",
