--- a/loleaflet/npm-shrinkwrap.json.in
+++ b/loleaflet/npm-shrinkwrap.json.in
@@ -2927,6 +2927,11 @@
         "jquery": "2.2.4"
       }
     },
+    "timeago.js": {
+      "version": "4.0.0-beta.1",
+      "resolved": "file:node_shrinkwrap/timeago.js-4.0.0-beta.1.tgz",
+      "dev": true
+    },
     "timers-browserify": {
       "version": "1.4.2",
       "resolved": "file:node_shrinkwrap/timers-browserify-1.4.2.tgz",
