test/fakesockettest 不須追蹤

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ systemplate
 test-driver
 jails
 cache
+test/fakesockettest
 test/data/hello-world.odt
 test/data/hello-world.ods
 test/data/hello-world.odp
