將所有圖片 css 從  menubar.css & toolbar.css 抽離 另外獨立為 images.css，可作更廣泛的應用。

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -66,6 +66,7 @@ LOLEAFLET_CSS =\
 	$(srcdir)/css/selectionMarkers.css \
 	$(srcdir)/css/loleaflet.css \
 	$(srcdir)/css/toolbar.css \
+	$(srcdir)/css/images.css \
 	$(srcdir)/css/partsPreviewControl.css \
 	$(srcdir)/css/scrollBar.css \
 	$(srcdir)/css/searchControl.css \
