--- a/loleaflet/npm-shrinkwrap.json.in
+++ b/loleaflet/npm-shrinkwrap.json.in
@@ -1475,6 +1475,11 @@
       "integrity": "sha1-TK+tdrxi8C+gObL5Tpo906ORpyU=",
       "dev": true
     },
+    "hammerjs": {
+      "version": "2.0.8",
+      "resolved": "file:node_shrinkwrap/hammerjs-2.0.8.tgz",
+      "dev": true
+    },
     "has": {
       "version": "1.0.1",
       "resolved": "file:node_shrinkwrap/has-1.0.1.tgz",
