--- a/loleaflet/package.json
+++ b/loleaflet/package.json
@@ -10,6 +10,7 @@
     "d3": "3.5.17",
     "eslint": "3.0.0",
     "exorcist": "0.4.0",
+    "hammerjs": "2.0.8",
     "jquery": "2.2.4",
     "jquery-contextmenu": "2.2.3",
     "jquery-ui": "1.10.5",
