--- a/oxoolwsd.spec.in
+++ b/oxoolwsd.spec.in
@@ -99,6 +99,7 @@ echo "account    required     pam_unix.so" >>  %{buildroot}/etc/pam.d/%{name}
 %config(noreplace) %attr(640, lool, root) /etc/%{name}/%{name}.xml
 %config /etc/%{name}/oxoolkitconfig.xcu
 %config(noreplace) /etc/%{name}/*.pem
+%config %attr(440, root, root) /etc/sudoers.d/lool
 
 %doc README
 
