新增思源黑體為預設字型， 讓 oxool 在任何環境，呈現統一的字體式樣

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,6 +38,13 @@ oxoolwsddatadir = @LOOLWSD_DATADIR@
 oxoolwsddata_DATA = discovery.xml \
                    favicon.ico
 
+fontconfigdir = ${sysconfdir}/fonts/conf.d
+fontconfig_DATA = SourceHan/65-oxool.conf
+
+sourcehanfontsdir = ${datarootdir}/fonts/SourceHan
+sourcehanfonts_DATA = SourceHan/SourceHanSans-Regular.ttc \
+		      SourceHan/SourceHanSans-Bold.ttc
+
 sudoersdir = ${sysconfdir}/sudoers.d
 sudoers_DATA = etc/sudoers.d/lool
 
@@ -261,6 +268,9 @@ EXTRA_DIST = discovery.xml \
              etc/cert.pem \
              etc/ca-chain.cert.pem \
              etc/sudoers.d/lool \
+	     SourceHan/65-oxool.conf \
+	     SourceHan/SourceHanSans-Regular.ttc \
+	     SourceHan/SourceHanSans-Bold.ttc \
              scripts/unocommands.py \
              $(man_MANS)
 
