取消 build test 相關機制，加速 building 過程

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ SUBDIRS = gtk loleaflet
 
 else
 
-SUBDIRS = . test loleaflet extensions
+SUBDIRS = . loleaflet extensions
 
 export ENABLE_DEBUG
 
