1. 套件名稱由 oxoolwsd  改為 oxool 2. 修正 rpm spec 安裝後會移除 /var/cache 及 systemplate 的問題 3.  釋出 3.1.6 版

--- a/Makefile.am
+++ b/Makefile.am
@@ -256,7 +256,6 @@ EXTRA_DIST = discovery.xml \
              oxoolwsd.spec \
              oxoolwsd.xml.in \
              oxoolwsd.service \
-             sysconfig.oxoolwsd \
              debian/compat \
              debian/copyright \
              debian/loolwsd.cron.d \
@@ -271,6 +270,7 @@ EXTRA_DIST = discovery.xml \
              etc/cert.pem \
              etc/ca-chain.cert.pem \
              etc/sudoers.d/lool \
+             etc/sysconfig/oxoolwsd \
 	     SourceHan/50-oxool.conf \
 	     SourceHan/SourceHanSans-Regular.ttc \
 	     SourceHan/SourceHanSans-Bold.ttc \
