--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ([2.63])
 
-AC_INIT([oxoolwsd], [3.1.5], [develop@ossii.com.tw])
+AC_INIT([oxool], [3.1.6], [develop@ossii.com.tw])
 LT_INIT([shared, disable-static, dlopen])
 
 AM_INIT_AUTOMAKE([1.10 subdir-objects tar-pax -Wno-portability])
@@ -720,7 +720,7 @@ Configuration:
 
     \$ make # to compile"
 if test -n "$with_lo_path"; then
-echo "    \$ make run # to start loolwsd
+echo "    \$ make run # to start oxloolwsd
 "
 fi
       ])
