--- a/oxoolwsd.spec.in
+++ b/oxoolwsd.spec.in
@@ -6,19 +6,16 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-%define config_options --disable-werror --with-logfile=/var/log/@PACKAGE_NAME@.log --disable-debug --enable-ssl -with-max-documents=8192 --with-max-connections=8192
+%define config_options --disable-debug --enable-ssl -with-max-documents=8192 --with-max-connections=8192
 %define loroot /opt/oxoffice
 
-%if 0%{?name_suffix:1}
-Name:           @PACKAGE_NAME@%{name_suffix}
-%else
 Name:           @PACKAGE_NAME@
-%endif
 Version:        @PACKAGE_VERSION@
 Release:        @LOOLWSD_VERSION_DIST@%{?dist}
 Vendor:         %{vendor}
 Summary:        OxOffice Online WebSocket Daemon
 License:        MPL
+Obsoletes:	oxoolwsd
 Source0:        @PACKAGE_NAME@-%{version}.tar.gz
 BuildRequires:  libcap-devel libpng-devel poco-devel >= 1.7.5
 %if 0%{?fedora} || 0%{?rhel} >= 7
@@ -37,7 +34,7 @@ Requires:       atk avahi-libs bzip2-libs cairo cups-libs dbus-glib dbus-libs fo
 %description
 
 %prep
-%setup -n @PACKAGE_NAME@-@PACKAGE_VERSION@
+%setup -q -n @PACKAGE_NAME@-@PACKAGE_VERSION@
 
 %build
 %configure \
@@ -55,12 +52,11 @@ make %{?_smp_mflags}
 #make check
 
 %install
-make install DESTDIR=%{buildroot}
-%__install -D -m 444 %{name}.service %{buildroot}%{_unitdir}/%{name}.service
+%make_install
+
+%__install -D -m 444 oxoolwsd.service %{buildroot}%{_unitdir}/oxoolwsd.service
+
 install -d -m 755 %{buildroot}/var/adm/fillup-templates
-%if 0%{?fedora} || 0%{?rhel} >= 7
-install -D -m 644 sysconfig.oxoolwsd %{buildroot}/etc/sysconfig/%{name}
-%endif
 mkdir -p %{buildroot}/etc/cron.d
 echo "#Remove old tiles once every 10 days at midnight" > %{buildroot}/etc/cron.d/%{name}.cron
 echo "0 0 */1 * * root find /var/cache/%{name} -type f -a -atime +10 -exec rm {} \;" >> %{buildroot}/etc/cron.d/%{name}.cron
@@ -70,7 +66,7 @@ echo "account    required     pam_unix.so" >>  %{buildroot}/etc/pam.d/%{name}
 
 %files
 /usr/bin/oxoolwsd
-/usr/bin/%{name}-systemplate-setup
+/usr/bin/oxoolwsd-systemplate-setup
 /usr/bin/oxoolforkit
 /usr/bin/oxoolconvert
 /usr/bin/oxoolconfig
@@ -88,16 +84,14 @@ echo "account    required     pam_unix.so" >>  %{buildroot}/etc/pam.d/%{name}
 /usr/share/man/man1/oxoolforkit.1.gz
 /usr/share/man/man1/oxoolconvert.1.gz
 /usr/share/man/man1/oxoolconfig.1.gz
-/usr/share/man/man1/%{name}-systemplate-setup.1.gz
-%{_unitdir}/%{name}.service
-%if 0%{?fedora} || 0%{?rhel} >= 7
-%config(noreplace) /etc/sysconfig/%{name}
-%endif
+/usr/share/man/man1/oxoolwsd-systemplate-setup.1.gz
+%{_unitdir}/oxoolwsd.service
+%config(noreplace) /etc/sysconfig/oxoolwsd
 
 %dir /etc/%{name}
 %config(noreplace) /etc/cron.d/%{name}.cron
-%config(noreplace) /etc/pam.d/oxoolwsd
-%config(noreplace) %attr(640, lool, root) /etc/%{name}/%{name}.xml
+%config(noreplace) /etc/pam.d/%{name}
+%config(noreplace) %attr(640, lool, root) /etc/%{name}/oxoolwsd.xml
 %config /etc/fonts/conf.d/50-oxool.conf
 %config /etc/%{name}/oxoolkitconfig.xcu
 %config(noreplace) /etc/%{name}/*.pem
@@ -106,7 +100,6 @@ echo "account    required     pam_unix.so" >>  %{buildroot}/etc/pam.d/%{name}
 %doc README
 
 %pre
-
 getent group lool >/dev/null || groupadd -r lool
 getent passwd lool >/dev/null || useradd -g lool -r lool
 
@@ -117,7 +110,7 @@ fc-cache -f
 mkdir -p /var/cache/%{name} && chown lool:lool /var/cache/%{name}
 rm -rf /var/cache/%{name}/*
 
-touch /var/log/%{name}.log && chown lool:lool /var/log/%{name}.log
+touch /var/log/oxoolwsd.log && chown lool:lool /var/log/oxoolwsd.log
 
 # Figure out where LO is installed, let's hope it is not a mount point
 # Create a directory for oxloolwsd on the same file system
@@ -130,26 +123,37 @@ chown lool:lool ${loolparent}/%{name}
 chown lool:lool ${loolparent}/%{name}/child-roots
 
 fc-cache ${loroot}/share/fonts/truetype
-su lool -c "%{name}-systemplate-setup ${loolparent}/%{name}/systemplate ${loroot} "%{_datadir}/%{name}/extensions" >/dev/null 2>&1"
+su lool -c "oxoolwsd-systemplate-setup ${loolparent}/%{name}/systemplate ${loroot} "%{_datadir}/%{name}/extensions" >/dev/null 2>&1"
 
 %if 0%{?fedora} || 0%{?rhel} >= 7
-%systemd_post %{name}.service
+%systemd_post oxoolwsd.service
 %endif
 
 
 %preun
 %if 0%{?fedora} || 0%{?rhel} >= 7
-%systemd_preun %{name}.service
+%systemd_preun oxoolwsd.service
 %endif
 
 %postun
+arg="$1"
 fc-cache -f
 %if 0%{?fedora} || 0%{?rhel} >= 7
-%systemd_postun %{name}.service
+%systemd_postun oxoolwsd.service
 %endif
-rm -fr /var/cache/%{name}
-loroot=%{loroot}
-loolparent=`cd ${loroot} && cd .. && /bin/pwd`
-rm -rf ${loolparent}/%{name}
+
+# Real uninstall
+# 如果是1，表示是 upgrade，不需要刪除檔案
+if [ $arg = 0 ] ; then
+    # log file
+    rm -f /var/log/oxoolwsd.log
+    # cache dir
+    rm -fr /var/cache/%{name}
+    # systemplate & child root
+    loroot=%{loroot}
+    loolparent=`cd ${loroot} && cd .. && /bin/pwd`
+    rm -rf ${loolparent}/%{name}
+fi
+ 
 
 %changelog
