--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,10 @@ AC_SUBST([LOOLWSD_VERSION_HASH])
 
 AC_DEFINE_UNQUOTED([LOOLWSD_VERSION_HASH],[["$LOOLWSD_VERSION_HASH"]],[LibreOffice Online git hash if present])
 
+LOOLWSD_BRANCH=`git rev-parse --abbrev-ref HEAD`
+AC_SUBST([LOOLWSD_BRANCH])
+AC_DEFINE_UNQUOTED([LOOLWSD_BRANCH], [["$LOOLWSD_BRANCH"]],[git branch name])
+
 AC_CONFIG_SRCDIR([wsd/LOOLWSD.cpp])
 
 AC_CONFIG_HEADERS([config.h])
