--- a/Makefile.am
+++ b/Makefile.am
@@ -251,6 +251,7 @@ distdir = $(PACKAGE)-$(VERSION)-$(LOOLWSD_BRANCH)
 
 dist-hook:
 	git log -1 --format=%h > $(distdir)/dist_git_hash 2> /dev/null || rm $(distdir)/dist_git_hash
+	git rev-parse --abbrev-ref HEAD > $(distdir)/dist_git_branch 2> /dev/null || rm $(distdir)/dist_git_branch
 
 EXTRA_DIST = discovery.xml \
              favicon.ico \
