--- a/debian/loolwsd.postinst.in
+++ b/debian/loolwsd.postinst.in
@@ -4,6 +4,7 @@ set -e
 
 case "$1" in
     configure)
+	setcap cap_net_bind_service=+ep /usr/bin/oxoolwsd || true
 	setcap cap_fowner,cap_mknod,cap_sys_chroot=ep /usr/bin/loolforkit || true
 
 	adduser --quiet --system --group --home /opt/lool lool
