--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -329,6 +329,7 @@ pot:
 		src/errormessages.js \
 		src/layer/marker/Annotation.js \
 		src/layer/tile/TileLayer.js \
+		src/layer/tile/TileLayer.TableOverlay.js \
 		src/map/Map.js \
 		src/map/handler/Map.FileInserter.js \
 		src/map/handler/Map.WOPI.js \
