正式切割出開發用套件初版：
1、把 common、net、wsd、kit 和 LibreOfficeKit 目錄下所有的 header 抽出。
2、把 common、net 程式，build in to liboxool.so 中，作為 share library 用。
3. oxoolwsd 和 oxoolforkit 分別 build 兩種版本，提供 make run 及打包安裝用。

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,12 +12,11 @@ SUBDIRS = gtk loleaflet
 
 else
 
-SUBDIRS = src/include src/lib loleaflet extensions
+SUBDIRS = bundled/include/LibreOfficeKit src/include common net src/lib wsd kit loleaflet extensions
 
 export ENABLE_DEBUG
 
 bin_PROGRAMS = \
-	oxoolwsd oxoolforkit \
 	oxoolconvert oxoolconfig
 
 dist_bin_SCRIPTS = oxoolwsd-systemplate-setup
@@ -92,12 +91,9 @@ AM_LDFLAGS = -pthread -Wl,-E,-rpath,/snap/oxoolwsd/current/usr/lib -lpam $(ZLIB_
 if ENABLE_SSL
 AM_LDFLAGS += -lssl -lcrypto
 else
-oxoolwsd_fuzzer_LDADD = -lssl -lcrypto
 oxoolwsd_LDADD = -lssl -lcrypto
-oxoolconfig_LDADD = -lssl -lcrypto
+oxoolconfig_LDADD = -lssl -lcrypto $(top_builddir)/src/lib/liboxool.la
 endif
-
-oxoolwsd_fuzzer_CPPFLAGS = -DKIT_IN_PROCESS=1 -DFUZZER=1 -DTDOC=\"$(abs_top_srcdir)/test/data\" $(AM_CPPFLAGS)
 
 AM_ETAGSFLAGS = --c++-kinds=+p --fields=+iaS --extra=+q -R --totals=yes --exclude=loleaflet *
 AM_CTAGSFLAGS = $(AM_ETAGSFLAGS)
@@ -136,22 +132,18 @@ oxoolwsd_SOURCES = $(oxoolwsd_sources) \
 noinst_PROGRAMS = clientnb \
                   connect \
                   lokitclient \
-                  oxoolwsd_fuzzer \
                   oxoolmap \
                   oxoolstress \
                   oxoolmount \
-                  oxoolsocketdump
+                  oxoolsocketdump \
+                  oxoolwsd \
+                  oxoolforkit
 
-connect_SOURCES = tools/Connect.cpp \
-                  common/Log.cpp \
-                  common/Protocol.cpp \
-                  common/Util.cpp
+connect_SOURCES = tools/Connect.cpp
+connect_LDADD = $(top_builddir)/src/lib/liboxool.la
 
-lokitclient_SOURCES = common/IoUtil.cpp \
-                      common/Log.cpp \
-                      tools/KitClient.cpp \
-                      common/Protocol.cpp \
-                      common/Util.cpp
+lokitclient_SOURCES = tools/KitClient.cpp
+lokitclient_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 oxoolforkit_sources = kit/ChildSession.cpp \
                      kit/ForKit.cpp \
@@ -160,34 +152,26 @@ oxoolforkit_sources = kit/ChildSession.cpp \
 oxoolforkit_SOURCES = $(oxoolforkit_sources) \
                      $(shared_sources)
 
-oxoolwsd_fuzzer_SOURCES = $(oxoolwsd_sources) \
-                         $(oxoolforkit_sources) \
-                         $(shared_sources) \
-                         kit/DummyLibreOfficeKit.cpp
-
-clientnb_SOURCES = net/clientnb.cpp \
-                   common/Log.cpp \
-                   common/Util.cpp
+clientnb_SOURCES = net/clientnb.cpp
+clientnb_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 oxoolmount_SOURCES = tools/mount.cpp
+oxoolmount_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 oxoolmap_SOURCES = tools/map.cpp
+oxoolmap_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 oxoolconvert_SOURCES = tools/Tool.cpp
+oxoolconvert_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 oxoolstress_CPPFLAGS = -DTDOC=\"$(abs_top_srcdir)/test/data\" ${include_paths}
-oxoolstress_SOURCES = tools/Stress.cpp \
-                     common/Protocol.cpp \
-                     common/Log.cpp \
-		     common/Util.cpp
+oxoolstress_SOURCES = tools/Stress.cpp
+oxoolstress_LDADD = $(top_builddir)/src/lib/liboxool.la
 
-oxoolconfig_SOURCES = tools/Config.cpp \
-		     common/Crypto.cpp \
-		     common/Log.cpp \
-		     common/Util.cpp
+oxoolconfig_SOURCES = tools/Config.cpp
 
-oxoolsocketdump_SOURCES = tools/WebSocketDump.cpp \
-			 $(shared_sources)
+oxoolsocketdump_SOURCES = tools/WebSocketDump.cpp
+oxoolsocketdump_LDADD = $(top_builddir)/src/lib/liboxool.la
 
 wsd_headers = wsd/Admin.hpp \
               wsd/AdminModel.hpp \
@@ -205,36 +189,7 @@ wsd_headers = wsd/Admin.hpp \
               wsd/TraceFile.hpp \
               wsd/UserMessages.hpp
 
-shared_headers = common/Common.hpp \
-                 common/Crypto.hpp \
-                 common/JsonUtil.hpp \
-                 common/IoUtil.hpp \
-                 common/FileUtil.hpp \
-                 common/Log.hpp \
-                 common/LOOLWebSocket.hpp \
-                 common/Protocol.hpp \
-                 common/Seccomp.hpp \
-                 common/Session.hpp \
-                 common/Unit.hpp \
-                 common/UnitHTTP.hpp \
-                 common/Util.hpp \
-                 common/MessageQueue.hpp \
-                 common/Message.hpp \
-                 common/Png.hpp \
-                 common/Rectangle.hpp \
-                 common/SigUtil.hpp \
-                 common/security.h \
-                 common/SpookyV2.h \
-                 net/DelaySocket.hpp \
-                 net/FakeSocket.hpp \
-                 net/ServerSocket.hpp \
-                 net/Socket.hpp \
-                 net/WebSocketHandler.hpp \
-                 tools/Replay.hpp
-if ENABLE_SSL
-shared_headers += net/Ssl.hpp \
-                  net/SslSocket.hpp
-endif
+shared_headers = tools/Replay.hpp
 
 kit_headers = kit/ChildSession.hpp \
               kit/Delta.hpp \
@@ -243,11 +198,6 @@ kit_headers = kit/ChildSession.hpp \
               kit/KitHelper.hpp
 
 noinst_HEADERS = $(wsd_headers) $(shared_headers) $(kit_headers) \
-                 bundled/include/LibreOfficeKit/LibreOfficeKit.h \
-                 bundled/include/LibreOfficeKit/LibreOfficeKit.hxx \
-                 bundled/include/LibreOfficeKit/LibreOfficeKitEnums.h \
-                 bundled/include/LibreOfficeKit/LibreOfficeKitInit.h \
-                 bundled/include/LibreOfficeKit/LibreOfficeKitTypes.h \
                  test/WopiTestServer.hpp \
                  test/countloolkits.hpp \
                  test/test.hpp \
@@ -316,6 +266,7 @@ run: all @TILECACHE_PATH@ @JAILS_PATH@
 	@cp $(abs_top_srcdir)/test/data/hello.odp $(abs_top_srcdir)/test/data/hello-world.odp
 	@echo
 	LOOL_SERVE_FROM_FS=1 ./oxoolwsd --o:sys_template_path="@SYSTEMPLATE_PATH@" --o:lo_template_path="@LO_PATH@" \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
 			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
 			  --o:tile_cache_path="@TILECACHE_PATH@" \
@@ -435,4 +386,4 @@ install-data-local:
 uninstall-local:
 	rmdir $(DESTDIR)$(LOOLWSD_MODULES_DIR)
 	rmdir $(DESTDIR)$(LOOLWSD_MODULE_CONFIG_DIR)
-	rmdir $(DESTDIR)$(LOOLWSD_MODULE_CONFIG_DIR)
+	rmdir $(DESTDIR)$(LOOLWSD_MODULE_DATA_DIR)
