--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -7,3 +7,7 @@ AM_CPPFLAGS = -I$(top_srcdir) \
 
 liboxool_la_SOURCES = \
 	oxool.cpp
+
+liboxool_la_LIBADD = \
+		$(top_builddir)/common/liboxoolcommon.la \
+		$(top_builddir)/net/liboxoolnet.la
