把 class Authorization 從 Auth.cpp 抽出， 成為 Authorization.cpp

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,6 +109,7 @@ shared_sources = common/FileUtil.cpp \
                  common/SpookyV2.cpp \
                  common/Unit.cpp \
                  common/Util.cpp \
+                 common/Authorization.cpp \
                  net/DelaySocket.cpp \
                  net/Socket.cpp
 if ENABLE_SSL
