--- a/oxoolwsd.xml.in
+++ b/oxoolwsd.xml.in
@@ -13,6 +13,7 @@
     <server_name desc="Hostname:port of the server running oxoolwsd. If empty, it's derived from the request." type="string" default=""></server_name>
     <client_port_number desc="Port number to listen to (default: 9980), must not be 9981">9980</client_port_number>
     <file_server_root_path desc="Path to the directory that should be considered root for the file server. This should be the directory containing loleaflet." type="path" relative="true" default="loleaflet/../">@LOOLWSD_DATADIR@</file_server_root_path>
+    <convert_to desc="Is file format conversion enabled?" type="bool" default="false">false</convert_to>
 
     <memproportion desc="The maximum percentage of system memory consumed by all of the OxOffice Online, after which we start cleaning up idle documents" type="double" default="80.0"></memproportion>
     <num_prespawn_children desc="Number of child processes to keep started in advance and waiting for new clients." type="uint" default="1">1</num_prespawn_children>
