修改 LOOLWSD_DATADIR 取得方式，避免 warning 訊息

--- a/configure.ac
+++ b/configure.ac
@@ -651,7 +651,7 @@ AC_SUBST(LOOLWSD_MODULE_CONFIG_DIR)
 LOOLWSD_MODULE_DATA_DIR=/var/lib/${PACKAGE}
 AC_SUBST(LOOLWSD_MODULE_DATA_DIR)
 
-LOOLWSD_DATADIR=${datadir}/${PACKAGE}
+LOOLWSD_DATADIR=${prefix}/share/${PACKAGE}
 AC_SUBST(LOOLWSD_DATADIR)
 
 AS_IF([test "$enable_setcap" != "no"],
