重新改寫 deb 打包相關檔案
打包指令為：
1. 進入 debian 目錄
2. debuild -uc -us -b

--- a/configure.ac
+++ b/configure.ac
@@ -691,7 +691,7 @@ AC_CONFIG_FILES([Makefile
                  oxoolwsd.spec
                  oxoolwsd.xml
                  oxool.pc
-                 debian/loolwsd.postinst])
+                 debian/oxool.postinst])
 AC_OUTPUT
 
 AC_LANG_POP
