--- a/debian/rules
+++ b/debian/rules
@@ -5,21 +5,24 @@ DPKG_EXPORT_BUILDFLAGS = 1
 
 include /usr/share/dpkg/default.mk
 
-CONFFLAGS = --enable-silent-rules --prefix=/usr --localstatedir=/var --sysconfdir=/etc --with-lokit-path=`pwd`/bundled/include --disable-setcap $(CONFIG_OPTIONS)
+CONFFLAGS = --enable-silent-rules --with-lokit-path=`pwd`/bundled/include --disable-setcap --disable-debug --enable-ssl -with-max-documents=8192 --with-max-connections=8192 --with-lo-path=/opt/oxoffice $(CONFIG_OPTIONS)
+
+# Avoid setcap when doing "make", when building for packaging
+# # the setcap is done at installation time
+export BUILDING_FROM_RPMBUILD=yes
 
 # main packaging script based on dh7 syntax
 %:
-	dh $@ --with=systemd --parallel
+	dh $@ --with=systemd
 
 override_dh_auto_configure:
-	./configure $(CONFFLAGS)
+	dh_auto_configure -- $(CONFFLAGS)
 
 override_dh_auto_test:
 	# do not test
 
+override_dh_auto_build:
+	dh_auto_build --parallel $(MAKEARGS)
+
 override_dh_installinit:
 	# no init.d scripts here, assume systemd
-
-override_dh_gencontrol:
-	# put package names of LibreOffice here
-	# dh_gencontrol -- -Vlo:Depends=""
